--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div>
         <img 
-        src="img/taro.png" 
+        src="https://github.com/Merakan/dotinstall/blob/main/img/blog.png" 
         alt="太郎のアイコン"
         width="120"
         height="120"
